# bootloader

./: Cargo.toml  build.rs  linker.ld
example-kernel/: Cargo.toml
example-kernel/.cargo/: config
src/: boot_info.rs  config.rs  main.rs  page_table.rs  rsd.rs  smp_trampoline.s
src/asm/: smp_trampoline.s
src/binary/: mod.rs
src/bootinfo/: mod.rs
